# ZooPrediction

./: README.md  app.py  pyproject.toml  requirements.txt
attached_assets/: content-1743075947109.md  detailed_report (7).csv
utils/: data_processing.py  prediction.py  visualization.py
