[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "chardet>=5.2.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "prophet>=1.1.6",
    "scikit-learn>=1.6.1",
    "streamlit>=1.44.0",
    "xlrd>=2.0.1",
]
